--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/core": "^3.6.5",
     "@tiptap/extension-color": "^3.6.5",
     "@tiptap/extension-font-family": "^3.6.5",
+    "@tiptap/extension-hard-break": "^3.6.5",
     "@tiptap/extension-heading": "^3.6.5",
+    "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/extension-text-style": "^3.6.5",
     "@tiptap/extension-underline": "^3.6.5",
     "@tiptap/react": "^3.6.5",
@@ -31,6 +34,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.1",
     "rehype-stringify": "^10.0.1",
