--- a/package.json
+++ b/package.json
@@ -14,23 +14,37 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tiptap/core": "^3.6.5",
+    "@tiptap/extension-code-block-lowlight": "^3.6.6",
     "@tiptap/extension-color": "^3.6.5",
     "@tiptap/extension-font-family": "^3.6.5",
     "@tiptap/extension-hard-break": "^3.6.5",
     "@tiptap/extension-heading": "^3.6.5",
+    "@tiptap/extension-highlight": "^3.6.6",
+    "@tiptap/extension-image": "^3.6.6",
+    "@tiptap/extension-link": "^3.6.6",
     "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/extension-subscript": "^3.6.6",
+    "@tiptap/extension-superscript": "^3.6.6",
+    "@tiptap/extension-task-item": "^3.6.6",
+    "@tiptap/extension-task-list": "^3.6.6",
+    "@tiptap/extension-text-align": "^3.6.6",
     "@tiptap/extension-text-style": "^3.6.5",
-    "@tiptap/extension-underline": "^3.6.5",
-    "@tiptap/react": "^3.6.5",
-    "@tiptap/starter-kit": "^3.6.5",
+    "@tiptap/extension-underline": "^3.6.6",
+    "@tiptap/react": "^3.6.6",
+    "@tiptap/starter-kit": "^3.6.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
+    "jodit": "^4.6.13",
+    "jodit-react": "^5.2.26",
+    "jotai": "^2.15.0",
+    "jotai-scope": "^0.9.5",
     "lottie-react": "^2.4.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "next-intl": "^4.3.11",
+    "next-intl": "^4.3.12",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
