full working code

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
