--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.1.1",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
+    "formik": "^2.4.6",
     "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
@@ -70,7 +71,8 @@
     "remark-rehype": "^11.1.2",
     "tailwind-merge": "^3.3.1",
     "unified": "^11.0.5",
-    "vfile-reporter": "^8.1.1"
+    "vfile-reporter": "^8.1.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
