--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jodit-react": "^5.2.26",
     "jotai": "^2.15.0",
     "jotai-scope": "^0.9.5",
+    "leo-profanity": "^1.8.0",
     "lottie-react": "^2.4.1",
     "lowlight": "^2.9.0",
     "lucide-react": "^0.544.0",
