--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@tiptap/extension-underline": "^3.6.6",
     "@tiptap/react": "^3.6.6",
     "@tiptap/starter-kit": "^3.6.6",
+    "ace-builds": "^1.43.4",
+    "autobind-decorator": "^2.4.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -50,8 +52,8 @@
     "framer-motion": "^12.23.22",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
-    "jodit": "^4.6.13",
-    "jodit-react": "^5.2.26",
+    "jodit": "^4.7.4",
+    "jodit-react": "^5.2.31",
     "jotai": "^2.15.0",
     "jotai-scope": "^0.9.5",
     "leo-profanity": "^1.8.0",
