done Reaction with Debounce + firestore + api for storig slugs reaction, formik requirments + ui like wordpress,

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tiptap/core": "^3.6.5",
     "@tiptap/extension-character-count": "^3.6.6",
     "@tiptap/extension-code-block-lowlight": "^3.6.6",
@@ -49,7 +51,7 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "formik": "^2.4.6",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "jodit": "^4.7.4",
