--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
@@ -17,32 +18,34 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tiptap/core": "^3.6.5",
+    "@tiptap/extension-blockquote": "^3.11.1",
     "@tiptap/extension-character-count": "^3.6.6",
-    "@tiptap/extension-code-block-lowlight": "^3.6.6",
-    "@tiptap/extension-color": "^3.6.6",
+    "@tiptap/extension-code-block-lowlight": "^3.11.1",
+    "@tiptap/extension-color": "^3.11.1",
     "@tiptap/extension-font-family": "^3.6.5",
     "@tiptap/extension-hard-break": "^3.6.5",
-    "@tiptap/extension-heading": "^3.6.5",
-    "@tiptap/extension-highlight": "^3.6.6",
+    "@tiptap/extension-heading": "^3.11.1",
+    "@tiptap/extension-highlight": "^3.11.1",
     "@tiptap/extension-history": "^3.6.6",
-    "@tiptap/extension-horizontal-rule": "^3.6.6",
-    "@tiptap/extension-image": "^3.6.6",
-    "@tiptap/extension-link": "^3.6.6",
+    "@tiptap/extension-horizontal-rule": "^3.11.1",
+    "@tiptap/extension-image": "^3.11.1",
+    "@tiptap/extension-link": "^3.11.1",
     "@tiptap/extension-placeholder": "^3.6.6",
-    "@tiptap/extension-subscript": "^3.6.6",
-    "@tiptap/extension-superscript": "^3.6.6",
+    "@tiptap/extension-subscript": "^3.11.1",
+    "@tiptap/extension-superscript": "^3.11.1",
     "@tiptap/extension-table": "^3.6.6",
     "@tiptap/extension-table-cell": "^3.6.6",
     "@tiptap/extension-table-header": "^3.6.6",
     "@tiptap/extension-table-row": "^3.6.6",
     "@tiptap/extension-task-item": "^3.6.6",
     "@tiptap/extension-task-list": "^3.6.6",
-    "@tiptap/extension-text-align": "^3.6.6",
-    "@tiptap/extension-text-style": "^3.6.6",
+    "@tiptap/extension-text-align": "^3.11.1",
+    "@tiptap/extension-text-style": "^3.11.1",
     "@tiptap/extension-typography": "^3.6.6",
-    "@tiptap/extension-underline": "^3.6.6",
-    "@tiptap/react": "^3.6.6",
-    "@tiptap/starter-kit": "^3.6.6",
+    "@tiptap/extension-underline": "^3.11.1",
+    "@tiptap/extension-youtube": "^3.11.1",
+    "@tiptap/react": "^3.11.1",
+    "@tiptap/starter-kit": "^3.11.1",
     "ace-builds": "^1.43.4",
     "autobind-decorator": "^2.4.0",
     "class-variance-authority": "^0.7.1",
@@ -53,6 +56,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "install": "^0.13.0",
     "jodit": "^4.7.4",
     "jodit-react": "^5.2.31",
