--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "critters": "0.0.23",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "formik": "^2.4.6",
@@ -67,7 +68,7 @@
     "lowlight": "^2.9.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "next-intl": "^4.3.12",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "npm": "^11.6.2",
     "react": "19.1.0",
