--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "lottie-react": "^2.4.1",
     "lowlight": "^2.9.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-intl": "^4.5.8",
     "next-themes": "^0.4.6",
     "npm": "^11.6.2",
